<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="Basic">

        <EditTextPreference
            android:title="File Path"
            android:summary="@string/Default_path"
            android:key="filePath" />
        <EditTextPreference
            android:title="mp3 Path"
            android:summary="@string/Default_path"
            android:key="mp3Path" />
        <PreferenceScreen
            android:title="@string/about"
            >
            <Preference
                android:title="Developer"
                android:summary="@string/developer"
                />
            <Preference
                android:title="@string/others"
                android:summary="@string/others_name"/>

        </PreferenceScreen>


    </PreferenceCategory>
</PreferenceScreen>