<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:id="@+id/line">
    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="#ffff6f01"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    <View
        android:id="@+id/toolbar_shadow"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/toolbar_dropshadow" />
    <TextView android:text="@string/Main" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/abc_text_size_title_material"
         />

    <Button
        android:id="@+id/Send"
        android:text="@string/send"
        android:background="@drawable/button"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        
        android:layout_gravity="center_horizontal" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />
    <Button
        android:id="@+id/Receive"
        android:text="@string/Receive"
        android:background="@drawable/button"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />
    <Button
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:id="@+id/Extracted"
        android:background="@drawable/button"
        android:text="Extracted"
        />
    </LinearLayout>



